cmake_minimum_required(VERSION 3.8)
project(LeetCodeProblemSet)

set(CMAKE_CXX_STANDARD 14)

add_executable(ReverseInteger math/ReverseInteger.cpp)
add_executable(PalindromeNumber math/PalindromeNumber.cpp)
add_executable(RomanToInteger math/RomanToInteger.cpp)
add_executable(TwoSum array/TwoSum.cpp)
