cmake_minimum_required(VERSION 3.8)
project(LeetCodeProblemSet)

set(CMAKE_CXX_STANDARD 14)

add_executable(LongestCommonPrefix string/LongestCommonPrefix.cpp)
add_executable(MergeTwoSortedLists list/MergeTwoSortedLists.cpp)
add_executable(PalindromeNumber math/PalindromeNumber.cpp)
add_executable(RemoveDuplicatesFromTwoSortedArray array/RemoveDuplicatesFromTwoSortedArray.cpp)
add_executable(RemoveElement array/RemoveElement.cpp)
add_executable(ReverseInteger math/ReverseInteger.cpp)
add_executable(RomanToInteger math/RomanToInteger.cpp)
add_executable(StrStr string/StrStr.cpp)
add_executable(TwoSum array/TwoSum.cpp)
add_executable(ValidParentheses string/ValidParentheses.cpp)
